fixes bug 177326 "Mozilla rapidly repeats requests multiple times" r=dougt sr=rpotts a=roc+moz